WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
81245
Web Inspector: crash in InspectorTimelineAgent when trying to add children to cancelable records
https://bugs.webkit.org/show_bug.cgi?id=81245
Summary
Web Inspector: crash in InspectorTimelineAgent when trying to add children to...
Andrey Kosyakov
Reported
2012-03-15 11:32:23 PDT
Cancelable records are not expected to have children, since they may be cancelled. pushGCEventRecords() used to indirectly add children to cancelable records by invoking addRecordToTimeline(). We should always commit cancelable records before trying to add children.
Attachments
Patch
(3.89 KB, patch)
2012-03-15 11:58 PDT
,
Andrey Kosyakov
vsevik
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Andrey Kosyakov
Comment 1
2012-03-15 11:58:09 PDT
Created
attachment 132096
[details]
Patch
Andrey Kosyakov
Comment 2
2012-03-15 12:30:52 PDT
Committed
r110872
: <
http://trac.webkit.org/changeset/110872
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug