Web Inspector: crash in InspectorTimelineAgent when trying to add children to cancelable records https://bugs.webkit.org/show_bug.cgi?id=81245

Reviewed by Vsevolod Vlasov.

* inspector/InspectorTimelineAgent.cpp:
(WebCore::InspectorTimelineAgent::addRecordToTimeline):
(WebCore):
(WebCore::InspectorTimelineAgent::innerAddRecordToTimeline):
(WebCore::InspectorTimelineAgent::appendRecord):
(WebCore::InspectorTimelineAgent::commitCancelableRecords):
* inspector/InspectorTimelineAgent.h:
(InspectorTimelineAgent):

Canonical link: https://commits.webkit.org/98434@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@110872 268f45cc-cd09-0410-ab3c-d52691b4dbfc