Source/WebCore/inspector/InspectorTimelineAgent.h
@@ -156,6 +156,7 @@ private:
     void commitCancelableRecords();
     void cancelRecord(const String& type);
     void addRecordToTimeline(PassRefPtr<InspectorObject>, const String& type);
+    void innerAddRecordToTimeline(PassRefPtr<InspectorObject>, const String& type);
 
     void pushGCEventRecords();
     void clearRecordStack();
